pkgs/core/test/fixtures/config-parser/invalid/malformed-source-whitespace/.boxfilesrc
{
  "plugins": {
    "copy": "npm:@boxfiles/provider copy"
  }
}
